Added verify user API to the service
