# services/accounts-svc/src/routes/user-routes/index.js
@@ -1,7 +1,9 @@
 'use strict';
 
 import registerUser from './registerUser.route.js';
+import verifyUserEmail from './verifyUser.route.js';
 
 export default {
   registerUser,
+  verifyUserEmail,
 };
